unpackaged/objects/OpCo_Additional_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Related Contact</label>
        <referenceTo>OpCo_Related_Contact__c</referenceTo>
        <relationshipLabel>OpCo Additional Comments</relationshipLabel>
        <relationshipName>OpCo_Additional_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_OpCo_Record_Id__c</fullName>
        <label>Opportunity OpCo Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OpCo Additional Comments</relationshipLabel>
        <relationshipName>OpCo_Additional_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_OpCo_Record_Id__c</fullName>
        <label>Related Contact OpCo Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source OpCo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MolDev</fullName>
                </value>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OpCo Additional Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunity_Additional_Comments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunity Additional Comments</label>
    </listViews>
    <listViews>
        <fullName>All_Related_Contact_Additional_Comments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OpCo_Related_Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Related Contact Additional Comments</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpCo Additional Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>